RESOLVED FIXED 261091
RemoteImageBufferProxy::ensureBackendCreated can wait for a message that isn't pending
https://bugs.webkit.org/show_bug.cgi?id=261091
Summary RemoteImageBufferProxy::ensureBackendCreated can wait for a message that isn'...
Matt Woodrow
Reported 2023-09-03 14:33:26 PDT
<rdar://114795818> ensureBackendCreated waits for the DidCreateBackend message to be delivered, but it's possible for the GPUP to have crashed and been recreated since the request was made, and thus the message will never arrive. We make new requests for backends in RemoteResourceCacheProxy::remoteResourceCacheWasDestroyed, so it should be fine to just fail to return a backend in the meantime.
Attachments
Matt Woodrow
Comment 1 2023-09-03 14:50:53 PDT
EWS
Comment 2 2023-09-05 01:25:14 PDT
Committed 267619@main (df7a74a8f788): <https://commits.webkit.org/267619@main> Reviewed commits have been landed. Closing PR #17390 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.