Cherry-pick df7a74a8f788. rdar://114795818

RemoteImageBufferProxy::ensureBackendCreated can wait for a message that isn't pending.
    https://bugs.webkit.org/show_bug.cgi?id=261091
    <rdar://114795818>

    Reviewed by Kimmo Kinnunen.

    Currently, we clear the backend in response to a GPUP clear, which calls prepareForBackingStoreChange.
    That can trigger ensureBackendCreated if we didn't yet have a backend, which will wait for the original backend (from the crashed process),
    but does so by forcing creation of the new GPUP. This message never arrives.

    clearBackend doesn't need to call prepareForBackingStoreChange if we didn't have a backend yet.

    * Source/WebKit/WebProcess/GPU/graphics/RemoteImageBufferProxy.cpp:
    (WebKit::RemoteImageBufferProxy::clearBackend):

    Canonical link: https://commits.webkit.org/267619@main

Identifier: 265870.526@safari-7616-branch